correction mobile + titre

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1548,7 +1548,8 @@ h1,
 h2,
 h3 {
     margin-top: 20px;
-    margin-bottom: 10px
+    margin-bottom: 10px;
+    width: 100%;
 }
 
 .h1 .small,
@@ -1985,11 +1986,11 @@ pre code {
     margin-left: auto
 }
 
-@media (min-width:768px) {
+/*@media (min-width:768px) {
     .container {
         width: 750px
     }
-}
+}*/
 
 /*@media (min-width:992px) {
     .container {
@@ -7795,6 +7796,7 @@ button.close {
 }
 
 .center-block {
+    width: 20%;
     display: block;
     margin-right: auto;
     margin-left: auto;
